# Wasm-xet-upload

./: Cargo.toml  README.md  build.sh  rust-toolchain.toml
src/: lib.rs  sha256.rs
www/: index.html  index.js  style.css  worker.js
