[package]
# "wasm-pack build", creates JS and Wasm files with a base name equal to the value of "name" in the output dir of wasm-pack, commonly "pkg"
# See this on how to set a different name for the JS and Wasm files: https://rustwasm.github.io/docs/wasm-pack/commands/build.html#generated-file-names
name = "read_file_with_wasm"
version = "0.1.0"
authors = ["Matthias Braun"]
description = "Example for reading a local file with Wasm"
license = "AGPL"
repository = "https://gitlab.com/bullbytes/read_file_with_wasm"
edition = "2021"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
# https://github.com/rustwasm/wasm-bindgen
wasm-bindgen = "0.2.95"

# https://github.com/Badel2/wasm-bindgen-file-reader
wasm-bindgen-file-reader = "1"

merklehash = { path = "/Users/di/hf/xet-core/merklehash" }
deduplication = {path = "/Users/di/hf/xet-core/deduplication" }
mdb_shard = {path = "/Users/di/hf/xet-core/mdb_shard" }
merkledb = {path = "/Users/di/hf/xet-core/merkledb" }
wasm_thread = "0.3.3"
sha2 = "0.10.8"
blake3 = "1.7.0"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Allows us to access browser elements like the console via Rust
# https://docs.rs/web-sys/latest/web_sys/
[dependencies.web-sys]
version = "0.3.60"
# Log to the browser console from Rust code
features = [ "console" ]
